# Git-HTTP-Server

./: .gitignore  Cargo.toml  LICENSE  README.md  gitea.db
backend/: Cargo.toml  gitea.db
backend/src/: main.rs
backend/src/api/: mod.rs  repo.rs  user.rs
backend/src/handlers/: api.rs
backend/src/models/: db.rs  mod.rs  notification.rs  pull_request.rs  repository.rs  user.rs
backend/src/templates/: base.html  docs.html  file.html  index.html  login.html  new_repo.html  profile.html  register.html  repo.html
frontend-react/: package-lock.json  package.json
frontend-react/src/: App.tsx
frontend-react/src/components/: CodeEditor.tsx  FileDiff.tsx  Header.tsx
frontend-react/src/pages/: HomePage.tsx  PullRequestPage.tsx  RepoPage.tsx
sqlite_practice/: Cargo.toml  README.md
sqlite_practice/src/: main.rs
src/: main.rs
src/handlers/: web.rs
